3.0.0-beta3 (????-??-??)
	* Added: OPTION_FORGIVING now also allows slashes in property names.
	* Fixed: DateTimeParser no longer fails on dates with years < 1000
	  & > 4999

3.0.0-beta2 (2013-06-10)
	* Fixed: Corrected includes.php file.
	* Fixed: vCard date-time parser supported extended-format dates as well.
	* Changed: Properties have been moved to an ICalendar or VCard directory.
	* Fixed: Couldn't parse vCard 3 extended format dates and times.
	* Fixed: Couldn't export jCard DATE values correctly.
	* Fixed: Recursive loop in ICalendar\DateTime property.

3.0.0-beta1 (2013-06-07)
	* Added: jsonSerialize() for creating jCal and jCard documents.
	* Added: helper method to parse vCard dates and times.
	* Added: Specialized classes for FLOAT, LANGUAGE-TAG, TIME, TIMESTAMP,
	  DATE-AND-OR-TIME, CAL-ADDRESS, UNKNOWN and UTC-OFFSET properties.
	* Removed: CommaSeparatedText property. Now included into Text.
	* Fixed: Multiple parameters with the same name are now correctly encoded.
	* Fixed: Parameter values containing a comma are now enclosed in
	  double-quotes.
	* Fixed: Iterating parameter values should now fully work as expected.
	* Fixed: Support for vCard 2.1 nameless parameters.
	* Changed: $valueMap, $componentMap and $propertyMap now all use
	  fully-qualified class names, so they are actually overridable.
	* Fixed: Updating DATE-TIME to DATE values now behaves like expected.

3.0.0-alpha4 (2013-05-31)
	* Added: It's now possible to send parser options to the splitter classes.
	* Added: A few tweaks to improve component and property creation.

3.0.0-alpha3 (2013-05-13)
	* Changed: propertyMap, valueMap and componentMap are now static
	  properties.
	* Changed: Component::remove() will throw an exception when trying to
	  a node that's not a child of said component.
	* Added: Splitter objects are now faster, line numbers are accurately
	  reported and use less memory.
	* Added: MimeDir parser can now continue parsing with the same stream
	  buffer.