@@ -2,6 +2,8 @@
 	* Added: OPTION_FORGIVING now also allows slashes in property names.
 	* Fixed: DateTimeParser no longer fails on dates with years < 1000
 	  & > 4999
+	* Fixed: Issue 36: Workaround for the recurrenceiterator and caldav events
+	  with a missing base event.
 
 3.0.0-beta2 (2013-06-10)
 	* Fixed: Corrected includes.php file.
